.atk-wrapper values are inside of media queries now.

--- a/framework/less/mixins.less
+++ b/framework/less/mixins.less
@@ -21,6 +21,7 @@
     // Fixes Opera/contenteditable bug:
     // http://nicolasgallagher.com/micro-clearfix-hack/#comment-36952
     line-height: 0;
+    width: 100%;
   }
   &:after {
     clear: both;
