--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -2,14 +2,14 @@
 // Layouts
 // ==========================================================
 
-@windowMinWidth: @siteMinWidth + @siteMargin*2;
+// @windowMinWidth: @siteMinWidth + @siteMargin*2;
 
 // Flexible Layout (credit: Pixel vs. Bytes)
-.siteMargins(@a) when not (ispercentage(@a)) {
-	padding-left: (@windowMinWidth - @siteMinWidth)/2;
-	padding-right: (@windowMinWidth - @siteMinWidth)/2;
-	max-width: @siteMaxWidth + (@windowMinWidth - @siteMinWidth);
-}
+// .siteMargins(@a) when not (ispercentage(@a)) {
+// 	padding-left: (@windowMinWidth - @siteMinWidth)/2;
+// 	padding-right: (@windowMinWidth - @siteMinWidth)/2;
+// 	max-width: @siteMaxWidth + (@windowMinWidth - @siteMinWidth);
+// }
 html, body  {
 	height: 100%; /* INFO Optional CSS for a sticky footer */
 }
@@ -21,9 +21,6 @@ html, body  {
 	>.atk-layout-row {
 		display: table-row;
 		height: 1px;
-		.atk-layout-cell {
-			min-width: @windowMinWidth;
-		}
 		&.atk-layout-fluid {
 			height: auto;
 		}
@@ -43,8 +40,5 @@ html, body  {
 .atk-wrapper {
     margin-left: auto;
     margin-right: auto;
-    min-width: @siteMinWidth;
-    max-width: @siteMaxWidth;
     width: 100%;
-    .siteMargins(@siteMinWidth);
 }
