--- a/playground/css/style-fixed.less
+++ b/playground/css/style-fixed.less
@@ -2,6 +2,7 @@
 
 // Testing out different styling configurations
 
-@siteMinWidth:         800px; // Side paddings are dropped if value is in percentages
-@siteMaxWidth:         800px; // Put the same value as in @siteMinWidth if fixed layout is required
-@siteMargin:           20px; // Margin between site's content and browser's edge
+
+// @siteMinWidth:         800px; // Side paddings are dropped if value is in percentages
+// @siteMaxWidth:         800px; // Put the same value as in @siteMinWidth if fixed layout is required
+// @siteMargin:           20px;// Margin between site's content and browser's edge
