--- a/playground/layouts/responsive.jade
+++ b/playground/layouts/responsive.jade
@@ -13,7 +13,7 @@ html(class='no-js')
     title Agile Toolkit CSS
     meta(name='description', content='')
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    link(rel='stylesheet', href='../css/style-fluid.css')
+    link(rel='stylesheet', href='../css/style-fixed.css')
   body.atk-responsive-test
     include ../includes/browsehappy
     include ../includes/analytics
@@ -22,92 +22,8 @@ html(class='no-js')
         div.atk-layout-cell.atk-swatch-ink.atk-padding
           div.atk-wrapper
             h2 Header Section
-      div.atk-layout-row.atk-layou-fluid
+      div.atk-layout-row.atk-layout-fluid
         div.atk-layout.atk-layout-cell
-          .atk-layout-column.atk-swatch-gray(style='min-width: 180px')
-            ul.atk-menu-vertical
-              li.atk-padding-small.atk-swatch-gray.atk-size-kilo Navigation
-              li.atk-menu-active
-                a.atk-padding-small.atk-swatch-gray.atk-cells(href='javascript:void(0)')
-                  span.atk-cell.atk-jackscrew
-                    span.icon-gauge-1
-                    | &nbsp;
-                    strong Dashboard
-                  span.atk-cell
-                    span.atk-label.atk-size-milli.atk-swatch-red 253
-              li
-                a.atk-padding-small.atk-swatch-gray.atk-cells(href='javascript:void(0)')
-                  span.atk-cell.atk-jackscrew
-                    span.icon-paper-plane
-                    | &nbsp;
-                    strong Messages
-                  span.atk-cell
-                    span.atk-label.atk-size-milli.atk-shape-circle.atk-swatch-green 1
-              li.atk-swatch-green
-                a.atk-padding-small.atk-swatch-gray.atk-cells(href='javascript:void(0)')
-                  span.atk-cell.atk-jackscrew
-                    span.icon-chart-line
-                    | &nbsp;
-                    strong Analytics
-                  span.atk-cell
-                    span.icon-right-dir
-                ul.atk-menu-horizontal
-                  li
-                    a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #1
-                  li
-                    a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #2
-                  li
-                    a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #3
-                  li
-                    a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #4
-                  li
-                    a.atk-padding-small.atk-swatch-green(href='javascript:void(0)') Subitem #5
-              li
-                a.atk-padding-small.atk-swatch-gray.atk-cells(href='javascript:void(0)')
-                  span.atk-cell.atk-jackscrew
-                    span.icon-tools
-                    | &nbsp;
-                    strong Settings
-                  span.atk-cell
-                    span.atk-size.atk-swatch-yellow.icon-attention
-              li.atk-swatch-blue
-                a.atk-padding-small.atk-swatch-gray.atk-cells(href='javascript:void(0)')
-                  span.atk-cell.atk-jackscrew
-                    span.icon-lifebuoy
-                    | &nbsp;
-                    strong Support
-                  span.atk-cell
-                    span.icon-right-dir
-                ul.atk-menu-vertical
-                  li
-                    a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #1
-                  li
-                    a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #2
-                  li
-                    a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #3
-                  li
-                    a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #4
-                  li
-                    a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #5
-              li.atk-swatch-blue
-                a.atk-padding-small.atk-swatch-gray.atk-cells(href='javascript:void(0)')
-                  span.atk-cell.atk-jackscrew
-                    span.icon-chat-empty
-                    | &nbsp;
-                    strong Forums
-                  span.atk-cell
-                    span.icon-right-dir
-                ul.atk-menu-horizontal
-                  li
-                    a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #1
-                  li
-                    a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #2
-                  li
-                    a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #3
-                  li
-                    a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #4
-                  li
-                    a.atk-padding-small.atk-swatch-blue(href='javascript:void(0)') Subitem #5
           div.atk-layout-column.atk-jackscrew.atk-padding
             .atk-wrapper
               h2 AgileToolkit CSS Grid System
