--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -23,12 +23,12 @@
 	@max: 1024px,
 	@cols:12,
 	@colsGutter: 30px,
-	@siteMinWidth: 900px,
-	@siteMaxWidth: 900px,
+	@siteMinWidth: 800px,
+	@siteMaxWidth: 800px,
 	@siteMargin: 30px
 );
-.createViewport(@class: 'tablet', @max:768px, @cols:6, @colsGutter: 20px, @breakLayout:true);	
-.createViewport(@class: 'mobile', @max:479px, @cols:3, @colsGutter: 20px,  @breakLayout:true);
+.createViewport(@class: 'tablet', @max:768px, @cols:6, @colsGutter: 20px, @stackLayout:true);	
+.createViewport(@class: 'mobile', @max:479px, @cols:3, @colsGutter: 20px,  @stackLayout:true);
 
 
 // ==========================================================
