--- a/framework/less/layouts.less
+++ b/framework/less/layouts.less
@@ -38,6 +38,7 @@ html, body  {
 	}
 }
 .atk-wrapper {
+	.box-sizing(content-box);
     margin-left: auto;
     margin-right: auto;
     width: 100%;
