Fixed bug in .atk-wrapper.

--- a/framework/less/responsive.less
+++ b/framework/less/responsive.less
@@ -43,7 +43,7 @@
    max-width: @smax + (@wmin - @smin);
   }
   .atk-layout>.atk-layout-row>.atk-layout-cell {
-    min-width: @smax;
+    min-width: @wmin;
   }
   .atk-wrapper {
       min-width: @smin;
