--- a/framework/less/variables.less
+++ b/framework/less/variables.less
@@ -27,8 +27,8 @@
 	@siteMaxWidth: 800px,
 	@siteMargin: 30px
 );
-.createViewport(@class: 'tablet', @max:768px, @cols:6, @colsGutter: 20px, @stackLayout:true);	
-.createViewport(@class: 'mobile', @max:479px, @cols:3, @colsGutter: 20px,  @stackLayout:true);
+.createViewport(@class: 'tablet', @max:768px, @cols:6, @colsGutter: 20px, @stackLayout:true, @siteMargin: 20px);	
+.createViewport(@class: 'mobile', @max:479px, @cols:3, @colsGutter: 20px,  @stackLayout:true, @siteMargin: 20px);
 
 
 // ==========================================================
