--- a/playground/layouts/responsive.jade
+++ b/playground/layouts/responsive.jade
@@ -19,12 +19,12 @@ html(class='no-js')
     include ../includes/analytics
     div.atk-layout
       div.atk-layout-row
-        div.atk-layout-cell.atk-swatch-ink.atk-padding
+        div.atk-layout-cell.atk-swatch-ink.atk-section
           div.atk-wrapper
             h2 Header Section
       div.atk-layout-row.atk-layout-fluid
         div.atk-layout.atk-layout-cell
-          div.atk-layout-column.atk-jackscrew.atk-padding
+          div.atk-layout-column.atk-jackscrew.atk-section
             .atk-wrapper
               h2 AgileToolkit CSS Grid System
               .atk-row.atk-push
@@ -109,7 +109,6 @@ html(class='no-js')
                   .atk-box-small 2
       div.atk-layout-row
         div.atk-layout-cell
-          div.atk-wrapper
-            hr.atk-hr-reset
-            .atk-padding
-              | Test
+          hr.atk-hr-reset
+          div.atk-wrapper.atk-section
+            | Footer
